# streamer-trainer

./: .env.example  .gitignore  AGENTS.md  LICENSE  config.default.yaml  config.yaml  electron-builder.yml  package-lock.json  package.json  pyproject.toml  start.sh
backend/: asr.py  config.py  main.py
backend/asr/: __init__.py  buffer.py  frame.py  output.py  pipeline.py  source.py  transcriber.py  vad.py
backend/asr/onnx/: decoder.py  feature.py  model.py  session.py
backend/data/: danmaku_example.txt
backend/llm/: agent.py  client.py  generator.py  selector.py
backend/viewer/: manager.py  models.py  personas.py  scheduler.py
docs/: adr-asr-onnx-migration.md  architecture-design.md  asr-test-guide.md  implementation-plan.md  use-cases-v1.1.md  use-cases.md
docs/superpowers/plans/: 2026-06-06-viewer-lifecycle-plan.md  2026-06-07-config-page.md  (+2 more)
electron/: main.js
frontend/: app.html  config.css  config.html  config.js  index.html  script.js  style.css
scripts/: build-backend.bat  debug_client.py  download-models.bat  download_models.py  test_asr_file.py  test_end_to_end_mic.py  test_pipeline_wav.py
tests/: test_agent.py  test_asr_buffer.py  test_asr_frame.py  test_asr_onnx_decoder.py  test_asr_onnx_feature.py  test_asr_onnx_model.py  test_asr_onnx_session.py  test_asr_pipeline.py  test_asr_source.py  test_asr_transcriber.py  test_asr_vad.py  test_backend_data_dir.py  test_client.py  test_config_api.py  test_generator.py  test_main.py  test_manager.py  test_models.py  test_personas.py  test_scheduler.py  test_selector.py
(+9 files in other folders)
