[project]
name = "streamer-trainer"
version = "0.1.0"
description = "基于主播语音的实时弹幕生成系统"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "websockets>=12.0",
    "faster-whisper>=1.0.0",
    "httpx>=0.27.0",
    "openai>=1.12.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0.0",
    "silero-vad>=5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.4.0",
]


